# api-backend

videoverse-backend/: Dockerfile  README.md  alembic.ini  creds.json  pyproject.toml  ruff.toml  videoverse.db
videoverse-backend/deploy/: docker-compose.dev.yml  docker-compose.yaml
videoverse-backend/tests/: __init__.py  test_video_controller.py
videoverse-backend/videoverse_backend/: __init__.py  __main__.py  server_config.py  settings.py
videoverse-backend/videoverse_backend/core/: __init__.py
videoverse-backend/videoverse_backend/core/errors/: env_error.py
videoverse-backend/videoverse_backend/core/schema/: common_response_schema.py
videoverse-backend/videoverse_backend/core/utils/: constants.py  enums.py  logging.py
videoverse-backend/videoverse_backend/dao/: __init__.py  base_dao.py  video_dao.py
videoverse-backend/videoverse_backend/db/: __init__.py
videoverse-backend/videoverse_backend/db/migrations/: env.py
videoverse-backend/videoverse_backend/db/migrations/versions/: 2021-08-16-16-53_819cbf6e030b.py
videoverse-backend/videoverse_backend/db/models/: __init__.py  base.py  video_model.py
videoverse-backend/videoverse_backend/middlewares/: __init__.py  logging_middleware.py  static_token_middleware.py
videoverse-backend/videoverse_backend/services/: __init__.py  file_service.py  firebase_service.py  video_service.py
videoverse-backend/videoverse_backend/static/docs/: swagger-ui-bundle.js  swagger-ui.css
videoverse-backend/videoverse_backend/web/: __init__.py  application.py  granian_app.py  hypercorn_app.py  lifespan.py
videoverse-backend/videoverse_backend/web/api/: __init__.py  router.py
videoverse-backend/videoverse_backend/web/api/docs/: __init__.py  views.py
videoverse-backend/videoverse_backend/web/api/echo/: __init__.py  schema.py  views.py
videoverse-backend/videoverse_backend/web/api/monitoring/: __init__.py  views.py
videoverse-backend/videoverse_backend/web/api/video/: __init__.py  controller.py  schema.py  views.py
